# NNChineseSentiment

./: CMakeLists.txt  LSTMWordDetector.cpp  LSTMWordDetector.h  LSTMWordDetectorJoint.cpp  LSTMWordDetectorJoint.h  MSparseDetector.cpp  Options.h  SparseDetector.h  SparseDetectorBi.cpp  SparseDetectorBiPBiJoint.cpp  SparseDetectorBiPUniJoint.cpp  SparseDetectorBiPrfx.cpp  SparseDetectorTri.cpp  SparseDetectorTriPBiJoint.cpp  SparseDetectorTriPUniJoint.cpp  SparseDetectorTriPrfx.cpp  VSparseDetector.h  VSparseDetectorBi.cpp  VSparseDetectorBiPrfx.cpp  VSparseDetectorTri.cpp  VSparseDetectorTriPrfx.cpp  cleanall.sh
basic/: ExampleMultiSeg.h  Instance.h  InstanceReader.h  InstanceWriter.h  LSTMCNNWordClassifier.h  LSTMCNNWordJointClassifier.h  MSparseClassifier.h  Pipe.h  Reader.h  Utf.h  VSparseClassifier.h
scripts/: ctb.nlpccNBest.sh  nlpccNBest.sh
